# dhg-hub

./: .env.test  .flaskenv  .gitignore  conftest.py  index.html  jest.config.mjs  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  setup.cfg  tsconfig.json  vercel.json  vite.config.ts
backend/: .env.example  .gitignore  package.json  pyproject.toml  pytest.ini  requirements.txt  verify_structure.py
backend/.mypy_cache/3.12/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  dataclasses.data.json  dataclasses.meta.json  enum.data.json  enum.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  pathlib.data.json  pathlib.meta.json  posixpath.data.json  posixpath.meta.json  re.data.json  re.meta.json  sre_compile.data.json  sre_compile.meta.json  sre_constants.data.json  sre_constants.meta.json  sre_parse.data.json  sre_parse.meta.json  string.data.json  string.meta.json  subprocess.data.json  subprocess.meta.json  (+12 more)
backend/.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json
backend/.mypy_cache/3.12/backend/: __init__.data.json  __init__.meta.json  verify_structure.data.json  verify_structure.meta.json
backend/.mypy_cache/3.12/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
backend/.mypy_cache/3.12/email/: __init__.meta.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json
backend/.mypy_cache/3.12/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json  machinery.data.json  machinery.meta.json  readers.data.json  readers.meta.json
backend/.mypy_cache/3.12/logging/: __init__.data.json  __init__.meta.json
backend/.mypy_cache/3.12/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
backend/.mypy_cache/3.12/sys/: __init__.data.json  __init__.meta.json  _monitoring.data.json  _monitoring.meta.json
backend/app/: main.py
backend/scripts/: check-backend.sh
backend/src/: __init__.py  main.py
backend/src/api/: routes.py
backend/src/core/: async_utils.py  base_crud_service.py  base_logging.py  config.py  exceptions.py  logging.py  middleware.py  supabase_client.py  types.py
backend/src/core/supabase/: base.py  implementations.py
backend/src/dhg/: __init__.py  cli.py  main.py  wsgi.py
backend/src/dhg/api/: dependencies.py
backend/src/dhg/core/: base_logging.py  config.py  exceptions.py  middleware.py  supabase_client.py
backend/src/dhg/db/: experts.py  uni_document_types.py
backend/src/dhg/models/: user.py
backend/src/dhg/schemas/: user.py
backend/src/dhg/services/: anthropic_service.py  base.py  pdf_anthropic.py  (+2 more)
backend/src/models/: base.py  user.py
backend/src/schemas/: base.py  user.py
backend/src/services/: base.py  user.py
backend/tests/: conftest.py  create_test_pdf.py  test_experts.py  test_imports.py  test_supabase_service.py  test_uni_document_types.py
backend/tests/core/: test_supabase_client.py
backend/tests/services/: test_anthropic_service.py  test_pdf_anthropic.py
backend/tests/unit/: test_example.py  test_supabase_client.py  test_supabase_service.py
(+1390 files in other folders)
