[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dhg-hub"
version = "0.1.0"
dependencies = [
    "fastapi",
    "anthropic",
    "supabase",
    # other dependencies
]

# Package definition for proper import resolution
[tool.hatch.build.targets.wheel]
packages = ["src/dhg"]

# Single consolidated pytest configuration
[tool.pytest.ini_options]
pythonpath = ["backend/src"]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]

# Your code quality tools remain the same
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]